Adds logging changes, as requested by owe

--- a/getting_started_analysis.ipynb
+++ b/getting_started_analysis.ipynb
@@ -67,6 +67,8 @@
    ],
    "source": [
     "import pyaerocom as pya\n",
+    "import logging\n",
+    "logging.getLogger().setLevel(logging.ERROR) # Set level in information outputted by pyaerocom to the console.\\n\",\n",
     "pya.__version__"
    ]
   },
