Use demo_datasets subfolder

--- a/add_station_data.ipynb
+++ b/add_station_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "04b9bd17-3014-430c-8439-dc1a0663804c",
    "metadata": {
     "slideshow": {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "de8540eb-c683-4a25-8bbf-7d7993bb263f",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "f12e2d0b-f219-4e5b-aca0-010e4d8d87dc",
    "metadata": {
     "slideshow": {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "91d0232e-4dc2-40dc-8ed5-da5391529fe0",
    "metadata": {},
    "outputs": [
@@ -127,17 +127,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tail: cannot open 'AERONET_V2_SDA_od550gt1aer2010_EastAsia.csv' for reading: No such file or directory\n"
+      "\n",
+      ",Baengnyeong,Beijing_RADI,Chen-Kung_Univ,Dalanzadgad,EPA-NCU,Gwangju_GIST,Hong_Kong_Hok_Tsui,Hong_Kong_PolyU,Lanzhou_City,Lulin,Minqin,NAM_CO,NCU_Taiwan,NUIST,Noto,Osaka,QOMS_CAS,SACOL,Taihu,Taipei_CWB,XiangHe,Xinglong,Yeomsan-Myeon\n",
+      "2010-01-15,,0.061210696844005,0.045836159568432,0.045757302021331,0.023873646226537,0.059614895016837,,0.038909430419758,0.209155783725835,0.005336199163457,,0.011891085604758,,0.109947051306775,,0.035111985976525,0.023743365446947,,,,0.091098097768661,,\n",
+      "2010-02-15,,0.126141178930487,0.08374315636903,0.088876039048444,0.027182844890892,0.061162641592402,,0.051849584461491,0.135079677542425,0.007924087419513,,,,0.11930723569294,,0.038839832314699,0.041427504517315,,0.087236461072295,0.088850093869133,0.115736350705925,,\n",
+      "2010-03-15,,0.177427598495459,0.05029977237098,0.102484625507818,0.072157265144057,0.180934438925154,0.11675405712405,0.141424480296263,0.244738881541866,0.011545292375373,,0.047224512682959,,0.347139665662375,,0.127289851083945,0.018390744794171,,0.272141363345382,0.085634160408572,0.141574100021826,,\n",
+      "2010-04-15,,0.194525682564903,0.065656992332231,0.043565613074893,0.122488312169253,0.090281537872786,0.072067197740185,0.115780439894352,,0.019156709486022,,0.050504380898425,0.34972372869025,0.282675282115031,,0.102373032693911,0.016003315147355,,0.261105059136771,0.122990142889762,0.16496181795613,,\n",
+      "2010-05-15,,0.223336290071556,0.06572708620222,0.033985566319726,0.105976772337813,0.11758489327196,0.07796731348343,0.111837637961098,,0.024019365502083,0.14395657385845,0.04752640539522,0.069806901886103,,,0.098524833679674,0.005625840950489,,0.17658155235208,0.130809467978121,0.230745098083114,,\n",
+      "2010-06-15,,0.077559973002486,0.038632035782638,,,0.029533860774756,0.050081748322712,0.046018441988182,,0.011716853100564,0.141560910502948,0.030745933006261,0.02844537133672,,,0.029584675961779,0.030788280519456,,0.069047625967903,0.06821335039204,0.084718133157658,,\n",
+      "2010-07-15,0.032169328406771,,0.0572657145241,,,0.027522328753683,0.062664024691744,0.051178483611842,,0.026016694244979,,0.024992477687214,0.055582336007189,,,0.038358881424443,,,0.157978616375008,,0.062111498697202,,\n",
+      "2010-08-15,0.040076994044655,,0.043330116391097,,,0.057713370288728,,0.072468735863873,,0.021172683412839,,0.034903089895501,0.031806535655258,,0.019109517116357,0.029481819926708,,0.085947212961709,0.084854631246942,,0.106540637615316,0.060286265839585,\n",
+      "2010-09-15,0.029667510868075,,0.029094081403198,,0.029449915652986,0.090011102189911,,0.056671627182406,,0.020485199807977,,0.030610082292822,0.028663411641698,,0.032149711076231,0.039358100695261,,0.057263635947861,0.078617893317836,,0.066581347825952,0.032692439875353,0.108272882249004\n",
+      "2010-10-15,0.045586298063705,,0.045253238327726,,0.028907474666606,0.045738364611231,,0.050383457626328,,0.009908622403853,,0.015082251858447,0.037492350682328,,0.027929645110297,0.024677307251591,0.012952369155955,0.058025871647289,,,0.0505897377068,0.027314815959056,0.017030146794558\n",
+      "2010-11-15,0.058226210577707,0.092625459271382,0.042550622015177,,0.051396349008774,,,0.056202614138447,,0.020330279804527,,0.00831493776862,0.05248559476174,,0.035700489393062,0.034111151606454,0.016539853615423,0.106408931838028,,,0.107168738877413,0.055976390443592,\n",
+      "2010-12-15,0.11003657360022,0.053874144333573,0.049187657168119,,0.073448474209141,,,0.07264574966747,,,,0.009039345226945,0.051612136276771,,0.054966902362633,0.036479393601337,,0.142332445217515,,,0.179982699359093,0.07974182657958,\n"
      ]
     }
    ],
    "source": [
-    "! tail -n 14 AERONET_V2_SDA_od550gt1aer2010_EastAsia.csv"
+    "! tail -n 14 demo_datasets/AERONET_V2_SDA_od550gt1aer2010_EastAsia.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "87349676-d4bf-4ae8-ab10-1368ccb0021a",
    "metadata": {},
    "outputs": [],
@@ -147,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "ea369cdb-11c1-4ab7-b6d6-6271dbe9da49",
    "metadata": {},
    "outputs": [
@@ -549,7 +562,7 @@
        "[12 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "d78e5119-669b-4fcf-a60b-1de9082412da",
    "metadata": {},
    "outputs": [],
@@ -587,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "bbb794a5-4d0a-4e9f-a833-afdd90f62651",
    "metadata": {},
    "outputs": [],
@@ -613,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "119ef007-f53c-4f1c-a900-86c6efd02f96",
    "metadata": {},
    "outputs": [],
@@ -631,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "79a47010-d6f3-4d56-9aea-321e66e11fa3",
    "metadata": {},
    "outputs": [],
@@ -641,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "e607d294-f059-4de0-836e-a20489cf940f",
    "metadata": {},
    "outputs": [],
@@ -667,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "8ae827b0-305c-4ce7-aa7a-78b382a5c72f",
    "metadata": {},
    "outputs": [
@@ -677,7 +690,7 @@
        "<Axes: title={'center': 'Jan 2010-Dec 2010 (monthly)'}, xlabel='od550gt1aer', ylabel='AEROCOM-MEDIAN-2x3_AP3-CTRL'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -698,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "2dd7c680-48c7-4dc7-ae24-b40628086b3b",
    "metadata": {},
    "outputs": [
@@ -708,7 +721,7 @@
        "<GeoAxes: >"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
