--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preliminary: Making a ColocatedData object with Pyaerocom\n",
+    "# WIP: Making a ColocatedData object with Pyaerocom\n",
     "Lewis Blake\n",
     "lewisb@met.no"
    ]
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +59,73 @@
     "- `ts_type`: Time series type (frequency), for example \"daily\" or \"monthly\".\n",
     "- `filter_name`: name of the region filter applied. If no spatial filering applied, should be the string \"ALL-wMOUNTAINS\".\n",
     "\n",
-    "A valid (and encouraged) way to create a `ColocatedData` object is to convert it into an xarray DataArray with the correct structure, dimensions, and metadata. You will have you object stored in some format. I already have a file which is structured correctly so we will load it into memory, explore it, and see how to convert it into a `ColocatedData` object. The task of CAMS2_82 partners will then be to do translation of their colocated data into this format."
+    "Note that the fields provided here in the name *must* match their associated values in the metadata below. FOr exmaple, the `model_name` here in the name needs to match the `model_name` in the metadata.\n",
+    "\n",
+    "A valid (and encouraged) way to create a `ColocatedData` object is to convert it into an xarray DataArray with the correct structure, dimensions, and metadata. You will have you object stored in some format. The task of CAMS2_82 partners will then be to do translation of their colocated data into this format.\n",
+    "\n",
+    "Included in pyaerocom is a colocated data object file. In fact there are a few, however there is one specifically included for this tutorial. Pyaerocom can a command line interface which is usefule for this. On the command line there are several functions available."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m                                                                                \u001b[0m\n",
+      "\u001b[1m \u001b[0m\u001b[1;33mUsage: \u001b[0m\u001b[1mpya [OPTIONS] COMMAND [ARGS]...\u001b[0m\u001b[1m                                        \u001b[0m\u001b[1m \u001b[0m\n",
+      "\u001b[1m                                                                                \u001b[0m\n",
+      " 🦄 Pyaerocom Command Line Interface                                            \n",
+      "                                                                                \n",
+      "\u001b[2m╭─\u001b[0m\u001b[2m Options \u001b[0m\u001b[2m───────────────────────────────────────────────────────────────────\u001b[0m\u001b[2m─╮\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36m-\u001b[0m\u001b[1;36m-version\u001b[0m             \u001b[1;32m-V\u001b[0m                                                     \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36m-\u001b[0m\u001b[1;36m-install\u001b[0m\u001b[1;36m-completion\u001b[0m            Install completion for the current shell.    \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36m-\u001b[0m\u001b[1;36m-show\u001b[0m\u001b[1;36m-completion\u001b[0m               Show completion for the current shell, to    \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m                                 copy it or customize the installation.       \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36m-\u001b[0m\u001b[1;36m-help\u001b[0m                          Show this message and exit.                  \u001b[2m│\u001b[0m\n",
+      "\u001b[2m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+      "\u001b[2m╭─\u001b[0m\u001b[2m Commands \u001b[0m\u001b[2m──────────────────────────────────────────────────────────────────\u001b[0m\u001b[2m─╮\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36mbrowse        \u001b[0m\u001b[1;36m \u001b[0m Browse database (e.g., browse \u001b[1;33m<DATABASE>\u001b[0m)                    \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36mclearcache    \u001b[0m\u001b[1;36m \u001b[0m Delete cached data objects                                   \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36mlistcache     \u001b[0m\u001b[1;36m \u001b[0m List cached data objects                                     \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36mppiaccess     \u001b[0m\u001b[1;36m \u001b[0m Check if MET Norway's PPI can be accessed                    \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36maeroval       \u001b[0m\u001b[1;36m \u001b[0m Run an AeroVal experiment as described in a json config file \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36mgetsampledata \u001b[0m\u001b[1;36m \u001b[0m Downloads a minimal sample dataset.                          \u001b[2m│\u001b[0m\n",
+      "\u001b[2m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pya --help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `getsampledata` command will download the neccessary files into `~/MyPyaerocom`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"/home/lewisb/Documents/CAMS2_82/data/my_colocated_data.nc\" # you will need to change this file path\n",
+    "!  pya getsampledata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = \"~/MyPyaerocom/testdata-minimal/modeldata/colocated_netcdf/my_colocated_data.nc\" # you will need to change this file path\n",
     "data = xr.open_dataarray(filepath)"
    ]
   },
@@ -98,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +190,8 @@
        " 'obs_vert_type': FieldInfo(annotation=Union[str, NoneType], required=False, default=None),\n",
        " 'obs_ts_type_read': FieldInfo(annotation=Union[str, dict, NoneType], required=False, default=None),\n",
        " 'obs_filters': FieldInfo(annotation=dict, required=False, default={}),\n",
-       " 'colocation_layer_limits': FieldInfo(annotation=Union[dict[str, float], NoneType], required=False, default=None),\n",
-       " 'profile_layer_limits': FieldInfo(annotation=Union[dict, NoneType], required=False, default=None),\n",
+       " 'colocation_layer_limits': FieldInfo(annotation=Union[tuple[LayerLimits, ...], NoneType], required=False, default=None),\n",
+       " 'profile_layer_limits': FieldInfo(annotation=Union[tuple[LayerLimits, ...], NoneType], required=False, default=None),\n",
        " 'read_opts_ungridded': FieldInfo(annotation=Union[dict, NoneType], required=False, default={}),\n",
        " 'model_name': FieldInfo(annotation=Union[str, NoneType], required=False, default=None),\n",
        " 'model_data_dir': FieldInfo(annotation=Union[Path, str, NoneType], required=False, default=None),\n",
@@ -156,16 +213,18 @@
        " 'model_outlier_ranges': FieldInfo(annotation=Union[dict[str, tuple[float, float]], NoneType], required=False, default={}),\n",
        " 'zeros_to_nan': FieldInfo(annotation=bool, required=False, default=False),\n",
        " 'harmonise_units': FieldInfo(annotation=bool, required=False, default=False),\n",
-       " 'regrid_res_deg': FieldInfo(annotation=Union[float, NoneType], required=False, default=None),\n",
+       " 'regrid_res_deg': FieldInfo(annotation=Union[float, RegridResDeg, NoneType], required=False, default=None),\n",
        " 'colocate_time': FieldInfo(annotation=bool, required=False, default=False),\n",
        " 'reanalyse_existing': FieldInfo(annotation=bool, required=False, default=True),\n",
        " 'raise_exceptions': FieldInfo(annotation=bool, required=False, default=False),\n",
        " 'keep_data': FieldInfo(annotation=bool, required=False, default=True),\n",
        " 'add_meta': FieldInfo(annotation=Union[dict, NoneType], required=False, default={}),\n",
-       " 'model_kwargs': FieldInfo(annotation=dict, required=False, default={})}"
+       " 'model_kwargs': FieldInfo(annotation=dict, required=False, default={}),\n",
+       " 'main_freq': FieldInfo(annotation=str, required=False, default='monthly'),\n",
+       " 'freqs': FieldInfo(annotation=list[str], required=False, default=['monthly', 'yearly'])}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +252,7 @@
        "{'data': FieldInfo(annotation=Union[Path, str, DataArray, ndarray, NoneType], required=False, default=None)}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +289,7 @@
        "(2, 3652, 665)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,11 +516,11 @@
     "\tdouble latitude(station_name) ;\n",
     "\t\tlatitude:_FillValue = NaN ;\n",
     "\t\tlatitude:standard_name = \"latitude\" ;\n",
-    "\t\tlatitude:units = \"degrees\" ;\n",
+    "\t\tlatitude:units = \"degrees_north\" ;\n",
     "\tdouble longitude(station_name) ;\n",
     "\t\tlongitude:_FillValue = NaN ;\n",
     "\t\tlongitude:standard_name = \"longitude\" ;\n",
-    "\t\tlongitude:units = \"degrees\" ;\n",
+    "\t\tlongitude:units = \"degrees_east\" ;\n",
     "\tdouble altitude(station_name) ;\n",
     "\t\taltitude:_FillValue = NaN ;\n",
     "\tdouble od550aer(data_source, time, station_name) ;\n",
