--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"~/MyPyaerocom/testdata-minimal/modeldata/colocated_netcdf/my_colocated_data.nc\" # you will need to change this file path\n",
+    "filepath = \"~/MyPyaerocom/testdata-minimal/modeldata/colocated_netcdf/my_colocated_data.nc\"\n",
     "data = xr.open_dataarray(filepath)"
    ]
   },
