clean up metadata

--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -59,7 +59,7 @@
     "- `ts_type`: Time series type (frequency), for example \"daily\" or \"monthly\".\n",
     "- `filter_name`: name of the region filter applied. If no spatial filering applied, should be the string \"ALL-wMOUNTAINS\".\n",
     "\n",
-    "Note that the fields provided here in the name *must* match their associated values in the metadata below. FOr exmaple, the `model_name` here in the name needs to match the `model_name` in the metadata.\n",
+    "Note that the fields provided here in the name **must** match their associated values in the metadata below. For exmaple, the `model_name` here in the name needs to match the `model_name` in the metadata.\n",
     "\n",
     "A valid (and encouraged) way to create a `ColocatedData` object is to convert it into an xarray DataArray with the correct structure, dimensions, and metadata. You will have you object stored in some format. The task of CAMS2_82 partners will then be to do translation of their colocated data into this format.\n",
     "\n",
@@ -121,12 +121,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "filepath = \"~/MyPyaerocom/testdata-minimal/modeldata/colocated_netcdf/my_colocated_data.nc\"\n",
     "data = xr.open_dataarray(filepath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that while included in pyaerocom, this data is not actually CF-compliant. For example, latitude and longitude have units degrees, but really should be \"degrees_north\" and \"degrees_east\" respectively. Let's fix that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.latitude.attrs[\"units\"] = \"degrees_north\"\n",
+    "data.longitude.attrs[\"units\"] = \"degrees_east\""
    ]
   },
   {
@@ -164,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +241,7 @@
        " 'freqs': FieldInfo(annotation=list[str], required=False, default=['monthly', 'yearly'])}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to ensure safe processing, we require the following metadata fields. Here is an example of a dictionary containing some example values."
+    "In order to ensure safe processing, we require **all** the following metadata fields. Here is an example of a dictionary containing some example values."
    ]
   },
   {
@@ -367,24 +384,24 @@
    "outputs": [],
    "source": [
     "metadata = {\n",
-    "    \"obs_vars\": \"od550aer\",\n",
+    "    \"obs_vars\": \"od550aer\", # must match boths obs_var_name and mod_var_name in filename\n",
     "    \"ts_type\": \"daily\",\n",
     "    \"filter_name\": \"ALL-wMOUNTAINS\",\n",
-    "    \"ts_type_src\": [\"hourly\", \"hourly\"],\n",
-    "    \"var_units\": [\"1\", \"1\"],\n",
+    "    \"ts_type_src\": [\"hourly\", \"hourly\"], # must be a list of strings, a ts type for each data_source\n",
+    "    \"var_units\": [\"1\", \"1\"], # must have units for each data_source\n",
     "    \"data_level\": 3,\n",
     "    \"revision_ref\": \"20221027\",\n",
     "    \"from_files\": ['ECMWF_OSUITE.daily.od550aer.2013.nc', 'ECMWF_OSUITE.daily.od550aer.2014.nc', 'ECMWF_OSUITE.daily.od550aer.2015.nc', 'ECMWF_OSUITE.daily.od550aer.2016.nc', 'ECMWF_OSUITE.daily.od550aer.2017.nc', 'ECMWF_OSUITE.daily.od550aer.2018.nc', 'ECMWF_OSUITE.daily.od550aer.2019.nc', 'ECMWF_OSUITE.daily.od550aer.2020.nc', 'ECMWF_OSUITE.daily.od550aer.2021.nc', 'ECMWF_OSUITE.daily.od550aer.2022.nc'],\n",
     "    \"from_files_ref\": \"None\",\n",
-    "    \"colocate_time\": 0,\n",
-    "    \"obs_is_clim\": 0,\n",
+    "    \"colocate_time\": 0, # default is 0\n",
+    "    \"obs_is_clim\": 0, # default is 0\n",
     "    \"pyaerocom\": pyaerocom.__version__,\n",
-    "    \"CONV!min_num_obs\": str(dict(monthly=dict(daily=3))),\n",
-    "    \"resample_how\": \"None\",\n",
-    "    \"obs_name\": \"AeronetL1.5-d\",\n",
-    "    \"vert_code\": \"Column\",\n",
-    "    \"diurnal_only\": 0,\n",
-    "    \"zeros_to_nan\": 1,\n",
+    "    \"CONV!min_num_obs\": str(dict(monthly=dict(daily=3))), # yes, needed\n",
+    "    \"resample_how\": \"mean\", # default\n",
+    "    \"obs_name\": \"AeronetL1.5-d\", # must match obs_name in filename\n",
+    "    \"vert_code\": \"Column\", # Literal[\"Column\", \"Profile\", \"Surface\", \"ModelLevel\"]. default is \"Surface\"\n",
+    "    \"diurnal_only\": 0, # default is 0\n",
+    "    \"zeros_to_nan\": 1, # default is 0\n",
     "}\n"
    ]
   },
