--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "Note that the fields provided here in the name **must** match their associated values in the metadata below. For exmaple, the `model_name` here in the name needs to match the `model_name` in the metadata.\n",
     "\n",
-    "A valid (and encouraged) way to create a `ColocatedData` object is to convert it into an xarray DataArray with the correct structure, dimensions, and metadata. You will have you object stored in some format. The task of CAMS2_82 partners will then be to do translation of their colocated data into this format.\n",
+    "A valid (and encouraged) way to create a `ColocatedData` object is to convert it into an xarray DataArray with the correct structure, dimensions, and metadata. You will have your object stored in some format. The task of CAMS2_82 partners will then be to do translation of their colocated data into this format.\n",
     "\n",
     "Included in pyaerocom is a colocated data object file. In fact there are a few, however there is one specifically included for this tutorial. Pyaerocom can a command line interface which is usefule for this. On the command line there are several functions available."
    ]
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that while included in pyaerocom, this data is not actually CF-compliant. For example, latitude and longitude have units degrees, but really should be \"degrees_north\" and \"degrees_east\" respectively. Let's fix that."
+    "Note that while included in pyaerocom, this data is not actually CF-compliant. For example, latitude and longitude have units \"degrees\", but really should be \"degrees_north\" and \"degrees_east\" respectively. Let's fix that."
    ]
   },
   {
