--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -15,8 +15,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a tutorial showing how the current version of pyaerocom can be used for creating colocated data objects which minimizes the risk of processing errors. It is a preliminary tutorial, and therefore subject to change as development continues. As the interface becomes better defined, this should simplify the process and changes will be reflected in updated versions of this tutorial. Feedback welcome.\n",
-    "\n",
+    "This is a tutorial showing how the current version of pyaerocom can be used for creating colocated data objects which minimizes the risk of processing errors. It is a preliminary tutorial, and therefore subject to change as development continues. As the interface becomes better defined, this should simplify the process and changes will be reflected in updated versions of this tutorial. Feedback welcome."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting started\n",
     "You may want to start by creating a Python virtual environment before begining and installing pyaerocom into it.\n",
     "\n",
     "\n",
@@ -40,30 +46,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Downloading example data"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's say we have done the collocation and stored the results in some object. As an example we will assume this is a netcdf file called `my_colocated_data.nc`.\n",
+    "Let's say we have done the collocation and stored the results in some object. As an example we will assume this is a netcdf file called `my_colocated_data.nc`. For simplcity of the tutorial, such a colocated data object file is included with pyaerocom. In fact there are a few, however there is a `my_colocated_data.nc` specifically included for this tutorial. Pyaerocom has a command line interface which is usefule for this. On the command line there are several functions available.\n",
     "\n",
-    "Our goal is to create a `ColocatedData` object named `od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc`\n",
-    "\n",
-    "The general format for `ColocateData` objects file name is `\"{obs_var_name}_{mod_var_name}_MOD-{model_name}_REF-{obs_name}_{date_start]_{date_end}_{ts_type}_{filter_name}.nc\"`\n",
-    "\n",
-    "- `obs_var_name`: Aerocom name for the obs variable. Can be found by searching here: https://github.com/metno/pyaerocom/blob/main-dev/pyaerocom/data/variables.ini\n",
-    "- `mod_var_name`: Aerocom name for model variable.\n",
-    "- `model_name`: Name of the model \n",
-    "- `obs_name`: Name of the observation network\n",
-    "- `date_start`: Start of the timerseries in the colocated array formated YYYYMMDD\n",
-    "- `date_end`: End of the timeseries in the colocated array formated YYYYMMDD\n",
-    "- `ts_type`: Time series type (frequency), for example \"daily\" or \"monthly\".\n",
-    "- `filter_name`: name of the region filter applied. If no spatial filering applied, should be the string \"ALL-wMOUNTAINS\".\n",
-    "\n",
-    "Note that the fields provided here in the name **must** match their associated values in the metadata below. For exmaple, the `model_name` here in the name needs to match the `model_name` in the metadata.\n",
-    "\n",
-    "A valid (and encouraged) way to create a `ColocatedData` object is to convert it into an xarray DataArray with the correct structure, dimensions, and metadata. You will have your object stored in some format. The task of CAMS2_82 partners will then be to do translation of their colocated data into this format.\n",
-    "\n",
-    "Included in pyaerocom is a colocated data object file. In fact there are a few, however there is one specifically included for this tutorial. Pyaerocom can a command line interface which is usefule for this. On the command line there are several functions available."
+    "Our goal is to create a `ColocatedData` object named `od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc`"
    ]
   },
   {
@@ -133,6 +129,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Converting to ColocatedData"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Note that while included in pyaerocom, this data is not actually CF-compliant. For example, latitude and longitude have units \"degrees\", but really should be \"degrees_north\" and \"degrees_east\" respectively. Let's fix that."
    ]
   },
@@ -144,6 +147,26 @@
    "source": [
     "data.latitude.attrs[\"units\"] = \"degrees_north\"\n",
     "data.longitude.attrs[\"units\"] = \"degrees_east\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The general format for `ColocateData` objects file name is `\"{obs_var_name}_{mod_var_name}_MOD-{model_name}_REF-{obs_name}_{date_start]_{date_end}_{ts_type}_{filter_name}.nc\"`\n",
+    "\n",
+    "- `obs_var_name`: Aerocom name for the obs variable. Can be found by searching here: https://github.com/metno/pyaerocom/blob/main-dev/pyaerocom/data/variables.ini\n",
+    "- `mod_var_name`: Aerocom name for model variable.\n",
+    "- `model_name`: Name of the model \n",
+    "- `obs_name`: Name of the observation network\n",
+    "- `date_start`: Start of the timerseries in the colocated array formated YYYYMMDD\n",
+    "- `date_end`: End of the timeseries in the colocated array formated YYYYMMDD\n",
+    "- `ts_type`: Time series type (frequency), for example \"daily\" or \"monthly\".\n",
+    "- `filter_name`: name of the region filter applied. If no spatial filering applied, should be the string \"ALL-wMOUNTAINS\".\n",
+    "\n",
+    "Note that the fields provided here in the name **must** match their associated values in the metadata below. For exmaple, the `model_name` here in the name needs to match the `model_name` in the metadata.\n",
+    "\n",
+    "A valid (and encouraged) way to create a `ColocatedData` object is to convert it into an xarray DataArray with the correct structure, dimensions, and metadata. You will have your object stored in some format. The task of CAMS2_82 partners will then be to do translation of their colocated data into this format."
    ]
   },
   {
@@ -471,6 +494,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving the ColocatedData object"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -506,6 +536,13 @@
    ],
    "source": [
     "coldata.to_netcdf(out_dir=out_dir, savename=savename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify the contents of the saved ColocatedData object"
    ]
   },
   {
