--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -36,13 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import pandas as pd\n",
     "import pyaerocom\n",
-    "import xarray as xr\n",
-    "import pandas as pd"
+    "import xarray as xr"
    ]
   },
   {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +85,14 @@
       "\u001b[2m│\u001b[0m \u001b[1;36m-\u001b[0m\u001b[1;36m-help\u001b[0m                          Show this message and exit.                  \u001b[2m│\u001b[0m\n",
       "\u001b[2m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
       "\u001b[2m╭─\u001b[0m\u001b[2m Commands \u001b[0m\u001b[2m──────────────────────────────────────────────────────────────────\u001b[0m\u001b[2m─╮\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36maeroval       \u001b[0m\u001b[1;36m \u001b[0m Run an AeroVal experiment as described in a json config file \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36mbrowse        \u001b[0m\u001b[1;36m \u001b[0m Browse database (e.g., browse \u001b[1;33m<DATABASE>\u001b[0m)                    \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36mclearcache    \u001b[0m\u001b[1;36m \u001b[0m Delete cached data objects                                   \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36mgetsampledata \u001b[0m\u001b[1;36m \u001b[0m Downloads a minimal sample dataset.                          \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36minit          \u001b[0m\u001b[1;36m \u001b[0m init ~/MyPyaerocom directory and copy the default paths.ini  \u001b[2m│\u001b[0m\n",
+      "\u001b[2m│\u001b[0m \u001b[1;36m               \u001b[0m there                                                        \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36mlistcache     \u001b[0m\u001b[1;36m \u001b[0m List cached data objects                                     \u001b[2m│\u001b[0m\n",
       "\u001b[2m│\u001b[0m \u001b[1;36mppiaccess     \u001b[0m\u001b[1;36m \u001b[0m Check if MET Norway's PPI can be accessed                    \u001b[2m│\u001b[0m\n",
-      "\u001b[2m│\u001b[0m \u001b[1;36maeroval       \u001b[0m\u001b[1;36m \u001b[0m Run an AeroVal experiment as described in a json config file \u001b[2m│\u001b[0m\n",
-      "\u001b[2m│\u001b[0m \u001b[1;36mgetsampledata \u001b[0m\u001b[1;36m \u001b[0m Downloads a minimal sample dataset.                          \u001b[2m│\u001b[0m\n",
       "\u001b[2m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
       "\n"
      ]
@@ -103,12 +106,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `getsampledata` command will download the neccessary files into `~/MyPyaerocom`."
+    "Ensure that pya/pyaerocom is at least version 0.25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🦄 pyaerocom 0.25.0.dev0\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pya -V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `getsampledata` command will download the neccessary files into `./data/`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"~/MyPyaerocom/testdata-minimal/modeldata/colocated_netcdf/my_colocated_data.nc\"\n",
+    "filepath = \"./data/testdata-minimal/modeldata/colocated_netcdf/my_colocated_data.nc\"\n",
     "data = xr.open_dataarray(filepath)"
    ]
   },
@@ -141,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +248,7 @@
        " 'CRASH_ON_INVALID': FieldInfo(annotation=bool, required=False, default=False),\n",
        " 'FORBIDDEN_KEYS': FieldInfo(annotation=list[str], required=False, default=['var_outlier_ranges', 'var_ref_outlier_ranges', 'remove_outliers']),\n",
        " 'filter_name': FieldInfo(annotation=str, required=False, default='ALL-wMOUNTAINS'),\n",
-       " 'basedir_coldata': FieldInfo(annotation=Union[str, Path], required=False, default='/home/lewisb/MyPyaerocom/colocated_data', validate_default=True),\n",
+       " 'basedir_coldata': FieldInfo(annotation=Union[str, Path], required=False, default='/home/heikok/MyPyaerocom/colocated_data', validate_default=True),\n",
        " 'save_coldata': FieldInfo(annotation=bool, required=False, default=False),\n",
        " 'obs_name': FieldInfo(annotation=Union[str, NoneType], required=False, default=None),\n",
        " 'obs_data_dir': FieldInfo(annotation=Union[Path, str, NoneType], required=False, default=None),\n",
@@ -264,7 +291,7 @@
        " 'freqs': FieldInfo(annotation=list[str], required=False, default=['monthly', 'yearly'])}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +319,7 @@
        "{'data': FieldInfo(annotation=Union[Path, str, DataArray, ndarray, NoneType], required=False, default=None)}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,16 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 3652, 665)"
+       "(2, 365, 665)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,18 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_source = ['AeronetSunV3Lev1.5.daily', 'ECMWF_OSUITE']\n",
-    "time = pd.date_range(start=\"2013-01-01\", end=\"2022-12-31\", freq = \"D\") # daily frequency\n",
+    "time = pd.date_range(start=\"2013-01-01\", end=\"2013-12-31\", freq = \"D\") # daily frequency\n",
     "station_names = list(data.coords[\"station_name\"].data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,26 +537,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "savename = \"od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc\"\n",
-    "out_dir = \"/home/lewisb/Documents/CAMS2_82/coldata\""
+    "out_dir = \"./data/coldata/\"\n",
+    "os.makedirs(out_dir, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/lewisb/Documents/CAMS2_82/coldata/od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc'"
+       "'./data/coldata/od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +634,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "pya",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
