adding ncdump command

--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -582,8 +582,6 @@
     "\n",
     "\n",
     "```console\n",
-    "\n",
-    "ncdump -h od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc\n",
     "netcdf od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS {\n",
     "dimensions:\n",
     "\tdata_source = 2 ;\n",
@@ -629,6 +627,61 @@
     "\t\tod550aer:diurnal_only = 0LL ;\n",
     "\t\tod550aer:coordinates = \"altitude longitude latitude\" ;\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "netcdf od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS {\n",
+      "dimensions:\n",
+      "\tdata_source = 2 ;\n",
+      "\ttime = 365 ;\n",
+      "\tstation_name = 665 ;\n",
+      "variables:\n",
+      "\tstring data_source(data_source) ;\n",
+      "\tint64 time(time) ;\n",
+      "\t\ttime:units = \"days since 2013-01-01 00:00:00\" ;\n",
+      "\t\ttime:calendar = \"proleptic_gregorian\" ;\n",
+      "\tstring station_name(station_name) ;\n",
+      "\tdouble latitude(station_name) ;\n",
+      "\t\tlatitude:_FillValue = NaN ;\n",
+      "\tdouble longitude(station_name) ;\n",
+      "\t\tlongitude:_FillValue = NaN ;\n",
+      "\tdouble altitude(station_name) ;\n",
+      "\t\taltitude:_FillValue = NaN ;\n",
+      "\tdouble od550aer(data_source, time, station_name) ;\n",
+      "\t\tod550aer:_FillValue = NaN ;\n",
+      "\t\tod550aer:obs_vars = \"od550aer\" ;\n",
+      "\t\tod550aer:ts_type = \"daily\" ;\n",
+      "\t\tod550aer:filter_name = \"ALL-wMOUNTAINS\" ;\n",
+      "\t\tstring od550aer:ts_type_src = \"hourly\", \"hourly\" ;\n",
+      "\t\tstring od550aer:var_units = \"1\", \"1\" ;\n",
+      "\t\tod550aer:data_level = 3LL ;\n",
+      "\t\tod550aer:revision_ref = \"20221027\" ;\n",
+      "\t\tstring od550aer:from_files = \"ECMWF_OSUITE.daily.od550aer.2013.nc\", \"ECMWF_OSUITE.daily.od550aer.2014.nc\", \"ECMWF_OSUITE.daily.od550aer.2015.nc\", \"ECMWF_OSUITE.daily.od550aer.2016.nc\", \"ECMWF_OSUITE.daily.od550aer.2017.nc\", \"ECMWF_OSUITE.daily.od550aer.2018.nc\", \"ECMWF_OSUITE.daily.od550aer.2019.nc\", \"ECMWF_OSUITE.daily.od550aer.2020.nc\", \"ECMWF_OSUITE.daily.od550aer.2021.nc\", \"ECMWF_OSUITE.daily.od550aer.2022.nc\" ;\n",
+      "\t\tod550aer:from_files_ref = \"None\" ;\n",
+      "\t\tod550aer:colocate_time = 0LL ;\n",
+      "\t\tod550aer:obs_is_clim = 0LL ;\n",
+      "\t\tod550aer:pyaerocom = \"0.25.0.dev0\" ;\n",
+      "\t\tod550aer:CONV\\!min_num_obs = \"{\\'monthly\\': {\\'daily\\': 3}}\" ;\n",
+      "\t\tod550aer:resample_how = \"mean\" ;\n",
+      "\t\tod550aer:obs_name = \"AeronetL1.5-d\" ;\n",
+      "\t\tod550aer:vert_code = \"Column\" ;\n",
+      "\t\tod550aer:diurnal_only = 0LL ;\n",
+      "\t\tod550aer:zeros_to_nan = 1LL ;\n",
+      "\t\tod550aer:coordinates = \"altitude latitude longitude\" ;\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ncdump -h \"./data/coldata/od550aer_od550aer_MOD-IFS-OSUITE_REF-AeronetL1.5-d_20130101_20221231_daily_ALL-wMOUNTAINS.nc\""
    ]
   }
  ],
