--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the current design, such A `ColocatedData` object comprises 3 or 4 dimensions.\n",
+    "In the current design, such a `ColocatedData` object comprises 3 or 4 dimensions.\n",
     "\n",
     "- The first dimension (`data_source`, index 0) is ALWAYS length 2 and specifies the two datasets that were co-located (index 0 is obs, index 1 is model). \n",
     "- The second dimension is `time`. \n",
@@ -701,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
