remakr about one colocated data object per timeseries

--- a/making_a_colocated_data_object_with_pyaerocom.ipynb
+++ b/making_a_colocated_data_object_with_pyaerocom.ipynb
@@ -191,7 +191,10 @@
     "- `ts_type`: Time series type (frequency), for example \"daily\" or \"monthly\".\n",
     "- `filter_name`: name of the region filter applied. If no spatial filering applied, should be the string \"ALL-wMOUNTAINS\".\n",
     "\n",
-    "Note that the fields provided here in the name **must** match their associated values in the metadata below. For exmaple, the `model_name` here in the name needs to match the `model_name` in the metadata.\n",
+    "Note that the fields provided here in the name **must** match their associated values in the metadata below. For example, the `model_name` here in the name needs to match the `model_name` in the metadata. \n",
+    "\n",
+    "Moreover, there is only one file per (variable, model, obs, period) combination. That is, just one collocated data file for the whole time series. \n",
+    "\n",
     "\n",
     "A valid (and encouraged) way to create a `ColocatedData` object is to convert it into an xarray DataArray with the correct structure, dimensions, and metadata. You will have your object stored in some format. The task of CAMS2_82 partners will then be to do translation of their colocated data into this format."
    ]
@@ -687,7 +690,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pya",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -701,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
